--- a/Stopwatch.html
+++ b/Stopwatch.html
@@ -49,7 +49,7 @@
         <h3>SmartChoice StopWatch</h3>
         <p id="time"><span id="second">00</span>:<span id="tens">00</span></p>
         <button id="start">Start</button>
-        <button id="stop">Stop</button>
+        <button id="stop">Pause</button>
         <button id="reset">Reset</button>
     </div>
     <script>window.onload = function () {
