--- a/Stopwatch.html
+++ b/Stopwatch.html
@@ -36,7 +36,7 @@
         border: none;
         padding: 10px 10px;
         font-size: 1.5em;
-        width: 100px;
+        width: 120px;
         margin: 10px;
         border-radius: 10px;
         color: MediumSeaGreen;
@@ -50,6 +50,7 @@
         <p id="time"><span id="second">00</span>:<span id="tens">00</span></p>
         <button id="start">Start</button>
         <button id="stop">Pause</button>
+        <button id="resume">Resume</button>
         <button id="reset">Reset</button>
     </div>
     <script>window.onload = function () {
